1998-02-19  Carsten Schaar <nhadcasc@fs-maphy.uni-hannover.de>

	* gnome-session.c: Removed. Was replaced by gnome-client.

	* gnome-session.h: same as above.

Wed Feb 18 13:52:00 PST 1998  Christoph Toshok  <toshok@hungry.com>
	* gnome-app-helper.c (gnome_app_do_menu_creation): If any items in
	a menu have GNOME_APP_PIXMAP_STOCK, use gnome_stock_menu_item for
	all of them, so the left side of the labels line up.
	(gnome_app_do_toolbar_creation): Use gnome_stock_pixmap_widget_new
	to create the toolbar button.
	
Wed Feb 18 17:03:13 KST 1998  Changwoo Ryu  <cwryu@adam.kaist.ac.kr>

	* gnome-about.c (gnome_destroy_about): Fixed refcounting.
	(gnome_fill_info, gnome_about_new): Fixed I18N problem.  (but a
 	dirty hack, it uses ONLY the fonts from gtkrc.).
	* gtkrc: Moved GnomeAbout styles to here.

1998-02-16  Federico Mena Quintero  <federico@nuclecu.unam.mx>

	* gnome-init.c (gnome_init): At last!  The horribly broken
	gnome_colors goes to hell now that we have imlib and the
	GdkColorContext :-)

	* libgnomeui.h: Removed gnome-colors include.

Tue Feb 17 00:16:49 KST 1998  Changwoo Ryu  <cwryu@adam.kaist.ac.kr>

	* gnome-messagebox.c (gnome_messagebox_button_clicked): Fixed
	buttonnumber counting.

	* gnome-scores.[ch]: Fixed i18n problem.  All color/font settings
 	are in gtkrc.
	(gnome_scores_set_logo_label_title): New function
	(gnome_scores_set_current_player): New function.
	* gnome-scores.c (gnome_scores_display): Use the above new
	functions. 

	* gtkrc: New file, the global gtk+ rc file of GNOME.
	* Makefile.am: Added gtkrc. 

1998-02-17  Eckehard Berns <eb@berns.prima.de>

	* gnome-stock.[ch]: added width/height fields to the
	GnomeStock...Entry structs to make sure a size_request gets the
	correct values.

Tue Feb 17 00:16:49 KST 1998  Changwoo Ryu  <cwryu@adam.kaist.ac.kr>


	* gnome-scores.c (gnome_scores_set_color): gtk_style_unref() new
	GtkStyle after gtk_widget_set_style.
	(gnome_scores_set_logo_label): Likewise.